# ahat-web

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-parse.mjs  test-parse.ts  tsconfig.json  vite.config.ts
android/: privapp-permissions-ahat.xml  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ahat/heapdumper/: DetailActivity.java  DiffActivity.java  DiffAdapter.java  DumpAdapter.java  EnrichService.java  GlobalMemInfo.java  HistoryActivity.java  MainActivity.java  MemInfo.java  ProcessAdapter.java  ProcessInfo.java  SettingsActivity.java  ShellHelper.java  Snapshot.java  SnapshotAdapter.java  SnapshotStore.java  ViewerActivity.java
android/app/src/main/res/drawable/: badge_bg.xml  ic_dumps.xml  ic_history.xml  ic_launcher.xml  ic_log.xml  ic_notif.xml  ic_settings.xml
android/app/src/main/res/layout/: activity_detail.xml  activity_diff.xml  activity_history.xml  activity_main.xml  activity_settings.xml  activity_viewer.xml  item_diff_row.xml  item_dump.xml  item_meminfo_row.xml  item_process.xml  item_snapshot.xml
android/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/ahat/heapdumper/: DiffLogicTest.java  GlobalMemInfoTest.java  ProcessInfoTest.java  ShellHelperFormatTest.java  ShellHelperParseTest.java  SnapshotTest.java  StateCountTest.java
procstate/: README.md  settings.gradle.kts
procstate/app/: build.gradle.kts  proguard-rules.pro
procstate/app/src/main/: AndroidManifest.xml
procstate/app/src/main/java/com/procstate/monitor/data/: AppDatabase.kt  Entities.kt  ShellHelper.kt  SnapshotDao.kt  TraceExporter.kt
procstate/app/src/main/java/com/procstate/monitor/service/: CaptureService.kt  ExportService.kt
procstate/app/src/main/java/com/procstate/monitor/ui/: MainActivity.kt  MainViewModel.kt  ProcStateTab.kt  ProcessTab.kt  SettingsSheet.kt
procstate/app/src/main/res/drawable/: ic_launcher.xml  ic_notif.xml
procstate/app/src/main/res/values/: strings.xml  themes.xml
procstate/app/src/main/res/values-night/: themes.xml
procstate/app/src/test/java/com/procstate/monitor/: EntitiesTest.kt  FormatTimestampTest.kt  FrozenParseTest.kt  MemInfoParseTest.kt  ProcStateColorsTest.kt  ShellHelperParseTest.kt  TraceExporterTest.kt
procstate/gradle/: libs.versions.toml
scripts/: patch-mithril-types.sh
src/: App.ts  App.tsx  bitmap-dumpdata.test.ts  components.ts  components.tsx  format.test.ts  format.ts  hex-view.test.ts  hprof-diff.test.ts  hprof.test.ts  hprof.ts  hprof.worker.ts  index.css  index.scss  main.tsx  mithril-helpers.ts  mithril-helpers.tsx  navigation.test.ts  navigation.ts  parity-check.ts  postmessage.test.ts  proguard-integration.test.ts  proguard.test.ts  proguard.ts  routing.ts  string-decode.test.ts  sys-hprof.test.ts  theme.ts  url-routing.test.ts  use-navigation.test.tsx  use-navigation.ts  use-theme.ts  utils.ts  vma-dump.test.ts  worker-proxy.ts  worker-queries.test.ts  zygote-candidates.test.ts  zygote-candidates.ts
src/adb/: capture-state.test.ts  capture.test.ts  capture.ts  device.ts  diff.test.ts  key-manager.ts  key.test.ts  key.ts  protocol.test.ts  protocol.ts  pull.test.ts  pull.ts  shared-mappings.test.ts  smaps.test.ts
src/views/: BitmapGalleryView.ts  BitmapGalleryView.tsx  CaptureView.ts  CaptureView.tsx  HexView.ts  HexView.tsx  ObjectView.ts  ObjectView.tsx  ObjectsView.ts  ObjectsView.tsx  OverviewView.ts  OverviewView.tsx  PerfettoView.ts  ProcessStringsView.test.ts  ProcessStringsView.ts  RootedView.ts  RootedView.tsx  SearchView.ts  SearchView.tsx  SiteView.ts  SiteView.tsx  SmapsFileView.test.ts  SmapsFileView.ts  StringsView.ts  StringsView.tsx  capture-helpers.test.ts  capture-helpers.ts  capture-search-integration.test.ts  capture-search.test.ts  capture-search.ts  strings-helpers.test.ts  strings-helpers.ts  vma-filters.test.ts
tracequery/: .gitignore  PLAN.md  PLAN_V2.md  PLAN_V3.md  local.properties  settings.gradle.kts
tracequery/app/: build.gradle.kts  proguard-rules.pro
tracequery/app/src/main/: AndroidManifest.xml
tracequery/app/src/main/assets/: stdlib_docs.json
tracequery/app/src/main/java/com/tracequery/app/: TraceQueryApp.kt
tracequery/app/src/main/jni/: CMakeLists.txt  trace_processor_jni.cc
tracequery/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
tracequery/app/src/main/res/values/: strings.xml  themes.xml
tracequery/app/src/main/res/values-night/: themes.xml
tracequery/gradle/: libs.versions.toml
(+23 files in other folders)
